<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background2">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.telyu.nourimate.custom.CustomTextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:fontFamily="@font/abel"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

        <com.telyu.nourimate.custom.CustomTextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:fontFamily="@font/abel"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TextViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTextViewClick"
        android:text="Forgot Password?"
        android:layout_marginTop="3dp"
        android:textColor="#999792"
        android:layout_gravity="end"
        android:fontFamily="@font/abel"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintBottom_toTopOf="@id/textView2" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onLoginClicked"
        android:text="Continue"
        android:textSize="23sp"
        android:fontFamily="@font/alatsi"
        android:background="@drawable/buttonlogin_background_with_shadow"
        app:backgroundTint="@null"
        android:textColor="@color/color23"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abel"
        android:text="Or"
        android:layout_marginTop="2dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignInWithGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSignInWithGoogleClicked"
        android:text="Sign In With Google"
        android:textStyle="bold"
        android:fontFamily="@font/abel"
        android:background="@drawable/buttonlogin_background_with_shadow"
        app:backgroundTint="@null"
        android:textColor="@color/color24"
        android:layout_marginTop="2dp"
        app:icon="@drawable/search"
        app:iconSize="20dp"
        app:iconTint="@null"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abel"
        android:text="Don't have an account?"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/TextViewSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/TextViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Sign Up"
        android:fontFamily="@font/abel"
        android:textSize="15sp"
        android:textColor="#B83405"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="Sign in to NouriMate"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/wavelogin"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alumnisans"
        android:text="WELCOME,"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="50sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alumnisans"
        android:text="Let's get started!"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <ImageView
        android:id="@+id/wavelogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/wave_login"
        android:elevation="4dp"
        app:layout_constraintWidth_percent="1.2"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginTop="-3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/waveloginshadow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:scaleType="fitXY"
        app:layout_constraintWidth_percent="1.2"
        android:src="@drawable/wave_login_with_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        android:elevation="4dp"
        android:rotation="-8"
        android:src="@drawable/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wavelogin" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="8dp"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>